WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104349
Assertion failed at WebCore::RedirectedXCompositeWindow::context()
https://bugs.webkit.org/show_bug.cgi?id=104349
Summary
Assertion failed at WebCore::RedirectedXCompositeWindow::context()
ChangSeok Oh
Reported
2012-12-07 00:27:53 PST
I faced this issue in 64 bit debugging build. ./Programs/GtkLauncher
http://www.webkit.org/blog-files/3d-transforms/poster-circle.html
--enable-accelerated-compositing ASSERTION FAILED: m_needsContext ../../Source/WebCore/platform/gtk/RedirectedXCompositeWindow.cpp(195) : WebCore::GLContext* WebCore::RedirectedXCompositeWindow::context() Segmentation fault (core dumped)
Attachments
Patch
(1.67 KB, patch)
2012-12-07 00:37 PST
,
ChangSeok Oh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
ChangSeok Oh
Comment 1
2012-12-07 00:37:52 PST
Created
attachment 178173
[details]
Patch
WebKit Review Bot
Comment 2
2012-12-08 00:37:55 PST
Comment on
attachment 178173
[details]
Patch Clearing flags on attachment: 178173 Committed
r137020
: <
http://trac.webkit.org/changeset/137020
>
WebKit Review Bot
Comment 3
2012-12-08 00:37:59 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug