Assertion failed at WebCore::RedirectedXCompositeWindow::context() https://bugs.webkit.org/show_bug.cgi?id=104349

Patch by ChangSeok Oh <shivamidow@gmail.com> on 2012-12-08
Reviewed by Martin Robinson.

We should return GLContext if m_needsContext is CreateGLContext. By the way
CreateGLContext is a enum value and its default value is 0. So checking
ASSERT(m_needsContext) causes a crash on debug build.
ASSERT(m_needsContext == CreateGLContext) is better here.

No new tests since we can verify this with already existing AC tests.

* platform/gtk/RedirectedXCompositeWindow.cpp:
(WebCore::RedirectedXCompositeWindow::context):

Canonical link: https://commits.webkit.org/122594@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137020 268f45cc-cd09-0410-ab3c-d52691b4dbfc